@@ -132,14 +132,14 @@ fix_put domain_realm "$DOMAIN"  "$REALM"
 #-- insert realm information
 # workaround: VAS 3.4's 'vastool info toconf' used to write a [domain_realms]
 # section. We try to detect that here and correct it.
-$VASTOOL -u host/ info toconf $FIXFILE
+verbose_echo "running vastool info toconf..."
 
 cp $FIXFILE $FIXFILE.new
 $VASTOOL -u host/ info toconf $FIXFILE.new || exit 1
 if grep '^\[domain_realms\]' $FIXFILE.new > /dev/null; then
     #-- retry, but using [domain_realms] so that info toconf merges entries
     sed -e 's/^\[domain_realm\]/[domain_realms]/' < $FIXFILE > $FIXFILE.new &&
-    $VASTOOL -u host/ info toconf $FIXFILE.new || exit 1
+    $VASTOOL -u host/ info toconf $FIXFILE.new >/dev/null || exit 1
     sed -e 's/^\[domain_realms\]/[domain_realm]/' < $FIXFILE.new > $FIXFILE
 else
     mv $FIXFILE.new $FIXFILE
@@ -149,6 +149,15 @@ if cmp "$FIXFILE" "$KRB5CONF" > /dev/null; then
     verbose_echo "  no changes needed to $KRB5CONF"
     exitcode=$EXNOCHANGE
 else
+
+    if test -h "$KRB5CONF"; then
+	cat <<-.
+		WARNING: $KRB5CONF is a symlink and not a regular file. 
+.
+	ls -l "$KRB5CONF"
+	yesorno "Should I continue to update this file?" no || exit 0
+    fi
+
     echo "# updated by $0 ($TODAY)" >> $FIXFILE
     backup=$KRB5CONF.$TODAY.$$
     cp $KRB5CONF $backup
